Build resource URLs with one parse (#166)
Handlers.url() built every URL it hands out with URL.of(new URI(spec),
handler), which parses the spec as a URI only to validate it and then
parses the same string again in Handler.parseURL. The URI parse cost more
than the URL parse and cannot fail, because the launcher's encoders emit
only unreserved ASCII, '/', ':' in the archive path and %XX escapes. It
now calls new URL(null, spec, handler), the constructor URL.of ends in,
so every field, equals, hashCode, toExternalForm and toURI are unchanged.

urlFor and outerUrlFor now share one spec builder. A name that needs no
escaping is joined to the cached prefix with a single String.concat; any
other name appends its plain run and resumes encodeName where it stopped.

A new HandlerTest case pins the fields of every URL shape against the
URL re-parsed from its string form, now that no URI parse guards them.

Closes #140

Co-authored-by: Claude Opus 5.5 <noreply@anthropic.com>